[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/World.gd" type="Script" id=3]
[ext_resource path="res://scenes/enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Explosion.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Ingame/explosionCrunch_000.ogg" type="AudioStream" id=6]
[ext_resource path="res://scenes/ScoreLabel.gd" type="Script" id=7]
[ext_resource path="res://Assets/Ingame/Bit Bit Loop.mp3" type="AudioStream" id=8]
[ext_resource path="res://Assets/Ingame/customFont.tres" type="DynamicFont" id=9]

[node name="World" type="Node"]
script = ExtResource( 3 )
EnemyScene = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 90, 294 )

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Explosion" parent="." instance=ExtResource( 5 )]

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
margin_right = -2.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 9 )
text = "0"
align = 1
valign = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0
autoplay = true

[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="finished" from="ExplosionSound" to="." method="_on_ExplosionSound_finished"]
